# pro

./: README.md
ack/etc/: ackrc
awk/src/: field  total
bash/etc/: aliases  bash_profile  bashrc
bash/snippets/: array.traverse.for.each.bash  array.traverse.for.step.bash  case.os.bash  comment.block.bash  comment.line.bash  comment.title.bash  condition.os.linux.bash  condition.string.match.bash  list.traverse.for.each.bash  stream.redirection.null.bash  string.pattern.match.bash
bib/: algo.bib  bd.bib  bd.tex  bm.tex  book.bib  mapred.tex  pdc.tex  sdn.bib  sdn.tex  template.bib  template.tex  white.bib
catch/example/: main.cpp
clion/colors/: pro.icls
clion/keymaps/: pro.xml
cmake/: CMakeLists.txt
code/: README
code/src/: main0.cpp  main0.hpp  main1.cpp  main2.cpp
codility/src/: main.cpp
data/list/: bpipemodules.txt  clangoptions.txt  cppkeywords.txt  gccoptions.txt  gdbcommands.txt  gdbinfo.txt  morecppidioms.txt
data/long/: 2e
data/tree/: tcpl
dbg/example/: main.cpp
dtrace/src/: countdown.d  counter.d  hello.d
gdb/etc/: gdbinfo  gdbinit
git/etc/: gitconfig
intellij/colors/: pro.icls
intellij/keymaps/: pro.xml
make/cpp/: Makefile
make/tex/: Makefile
note/: note.txt
pip/: pip.conf
playground/: CMakeLists.txt
pycharm/colors/: pro.icls
pycharm/keymaps/: pro.xml
readline/etc/: inputrc
tex/bib/: Makefile  bib.tex  bm.bib  h2r.bib  (+5 more)
todo/: 23Fri.md  23Sat.md  23Sun.md  23Thu.md  24Fri.md  24Mon.md  24Sun.md  24Thu.md  24Tue.md  24Wed.md  25Mon.md  25Thu.md  25Tue.md  25Wed.md  26Mon.md  26Thu.md  26Tue.md  26Wed.md
(+12 files in other folders)
